# Diagrama Entidade-Relacionamento - Sistema de Oficina Mecânica

## 📊 Modelo ER em Mermaid

```mermaid
erDiagram
    CLIENTE {
        int id_cliente PK
        string nome
        string cpf_cnpj
        string telefone
        string email
        string endereco_rua
        string endereco_numero
        string endereco_cidade
        string endereco_estado
        string endereco_cep
        enum tipo_cliente
        date data_cadastro
        boolean status_ativo
    }
    
    VEICULO {
        int id_veiculo PK
        string placa UK
        string marca
        string modelo
        int ano_fabricacao
        int ano_modelo
        string cor
        int quilometragem
        string numero_chassi
        enum combustivel
        int id_cliente FK
        date data_cadastro
    }
    
    MECANICO {
        int codigo_mecanico PK
        string nome
        string cpf UK
        string telefone
        string endereco_rua
        string endereco_numero
        string endereco_cidade
        string endereco_estado
        string endereco_cep
        enum especialidade
        decimal salario
        date data_contratacao
        boolean status_ativo
    }
    
    EQUIPE {
        int id_equipe PK
        string nome_equipe
        string descricao
        date data_formacao
        int lider_equipe FK
        boolean status_ativa
    }
    
    ORDEM_DE_SERVICO {
        int numero_os PK
        date data_emissao
        date data_prevista_conclusao
        date data_conclusao_real
        decimal valor_mao_obra
        decimal valor_pecas
        decimal valor_total
        text descricao_problema
        text observacoes
        enum status_os
        boolean autorizacao_cliente
        date data_autorizacao
        int id_veiculo FK
        int id_equipe FK
    }
    
    SERVICO {
        int id_servico PK
        string nome_servico
        text descricao
        string categoria
        decimal tempo_estimado_horas
        decimal valor_referencia
        int complexidade
        boolean requer_especializacao
        boolean status_ativo
    }
    
    PECA {
        int id_peca PK
        string codigo_peca UK
        string nome_peca
        text descricao
        string marca
        string modelo_compativel
        decimal valor_unitario
        int estoque_atual
        int estoque_minimo
        string unidade_medida
        string localizacao_estoque
        boolean status_ativo
    }
    
    TABELA_REFERENCIA_MAO_OBRA {
        int id_referencia PK
        string tipo_servico
        string especialidade_requerida
        decimal valor_hora_base
        decimal multiplicador_complexidade
        decimal tempo_padrao_horas
        date data_vigencia_inicio
        date data_vigencia_fim
        boolean status_ativo
    }
    
    MECANICO_EQUIPE {
        int id_mecanico PK_FK
        int id_equipe PK_FK
        date data_entrada_equipe
        date data_saida_equipe
        string funcao_na_equipe
        boolean status_ativo
    }
    
    OS_SERVICO {
        int numero_os PK_FK
        int id_servico PK_FK
        int quantidade
        decimal valor_unitario
        decimal valor_total
        decimal tempo_executado_horas
        text observacoes
        enum status_execucao
        int mecanico_responsavel FK
    }
    
    OS_PECA {
        int numero_os PK_FK
        int id_peca PK_FK
        int quantidade_utilizada
        decimal valor_unitario
        decimal valor_total
        date data_aplicacao
        int mecanico_aplicador FK
        text observacoes
    }
    
    %% Relacionamentos 1:N
    CLIENTE ||--o{ VEICULO : "possui"
    VEICULO ||--o{ ORDEM_DE_SERVICO : "gera"
    EQUIPE ||--o{ ORDEM_DE_SERVICO : "atende"
    MECANICO ||--o{ EQUIPE : "lidera"
    
    %% Relacionamentos N:M através de entidades associativas
    MECANICO ||--o{ MECANICO_EQUIPE : "participa"
    EQUIPE ||--o{ MECANICO_EQUIPE : "composta_por"
    
    ORDEM_DE_SERVICO ||--o{ OS_SERVICO : "contém"
    SERVICO ||--o{ OS_SERVICO : "executado_em"
    
    ORDEM_DE_SERVICO ||--o{ OS_PECA : "utiliza"
    PECA ||--o{ OS_PECA : "consumida_em"
    
    %% Relacionamentos adicionais
    MECANICO ||--o{ OS_SERVICO : "executa"
    MECANICO ||--o{ OS_PECA : "aplica"
    
    %% Relacionamento 1:1
    SERVICO ||--|| TABELA_REFERENCIA_MAO_OBRA : "referencia"
```

## 📋 Legendas e Explicações

### Símbolos Utilizados
- **PK** = Primary Key (Chave Primária)
- **FK** = Foreign Key (Chave Estrangeira)
- **UK** = Unique Key (Chave Única)
- **PK_FK** = Chave que é tanto Primária quanto Estrangeira

### Cardinalidades
- **||--o{** = Relacionamento 1:N (Um para Muitos)
- **||--||** = Relacionamento 1:1 (Um para Um)
- **}o--o{** = Relacionamento N:M (Muitos para Muitos)

### Status/Enums Definidos

#### Status da Ordem de Serviço
- `Pendente`: OS criada, aguardando autorização
- `Aprovada`: Cliente autorizou, aguardando início
- `Em Andamento`: Serviços sendo executados
- `Concluída`: Todos os serviços finalizados
- `Cancelada`: OS cancelada pelo cliente ou oficina

#### Especialidades dos Mecânicos
- `Motor`: Especialista em motores
- `Suspensão`: Especialista em sistema de suspensão
- `Freios`: Especialista em sistema de freios
- `Elétrica`: Especialista em parte elétrica
- `Pintura`: Especialista em pintura automotiva
- `Funilaria`: Especialista em funilaria
- `Ar Condicionado`: Especialista em climatização

#### Tipos de Cliente
- `Pessoa Física`: Cliente individual
- `Pessoa Jurídica`: Empresa/organização

#### Tipos de Combustível
- `Gasolina`, `Álcool`, `Flex`, `Diesel`, `GNV`, `Elétrico`, `Híbrido`

### Fluxo do Processo

1. **Cliente** traz **Veículo** para a oficina
2. **Equipe** de **Mecânicos** avalia o veículo
3. É criada uma **Ordem de Serviço** com os **Serviços** necessários
4. São identificadas as **Peças** necessárias
5. Cliente autoriza a execução
6. **Mecânicos** executam os **Serviços** e aplicam as **Peças**
7. OS é finalizada com todos os valores calculados

### Integridade Referencial

- Todo **Veículo** deve pertencer a um **Cliente**
- Toda **Ordem de Serviço** deve referenciar um **Veículo** e uma **Equipe**
- **Mecânicos** podem participar de múltiplas **Equipes**
- Uma **OS** pode conter múltiplos **Serviços** e **Peças**
- Valores são calculados automaticamente baseados nas tabelas de referência

## 🔍 Observações Técnicas

### Otimizações Recomendadas
- Índices em campos de busca frequente (placa, CPF, data_emissao)
- Particionamento da tabela OS por data para grandes volumes
- Views para relatórios complexos
- Triggers para manutenção de estoque e cálculos automáticos

### Extensões Futuras
- Sistema de agendamento
- Controle de garantias
- Histórico de manutenções
- Integração com fornecedores
- Sistema de fidelidade para clientes
- Controle financeiro e faturamento

---

Este diagrama serve como referência visual para o desenvolvimento e implementação do banco de dados da oficina mecânica.